--- a/chap1.tex
+++ b/chap1.tex
@@ -1,10 +1,22 @@
 \chapter{Introduction}
+This chapter introduces lasers, applications of laser-accelerated protons, and gives an outline of the topics presented in this work.
 
-\section{Historical Overview}
+\section{Lasers}
 
-\subsection{Lasers}
+The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons if the properties of the incident photon are just right CITE. These identical photons form a coherent light source which possess the same ``quantum-mechanical phase'' and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic waves called with a device called the maser (because it produced microwave wavelength light). Nowadays, these devices are more generally called lasers because they produce light in other wavelengths (like visible and infrared).
 
-\subsection{Laser-Driven Ion Acceleration}
+in a Ti:Sapph laser, 532nm light is obtained from a frequency doubled Nd:YAG laser. 532nm light is enough to excite Ti3+ ions, but this is an unstable state that decays to lower states with wavelength transitions between 650nm and 1100nm. The stimulated emission happens between the 650nm and 1100nm wavelengths and achieves a broadband spectrum which is essential for the short pulse lengths. 
+
+Nd:YAG lasers work by pumping (flash lamp or diode laser) to make gain media to in excited state. After population inversion is reached, released photons. Stimulated emission moves atom into unexcited state which stimulates release of photon. metastable state of Nd:YAG laser is 4F 3/2 state which goes down to 4F 1/2 with a transition of 1064 nm which is frequency doubled (second order HHG) to get the 532 nm for Ti:Sapph. the pump source of the Nd:Yag laser can be a flash lamp, but modern setups use diode lasers that emi at a specific wavelength of around 808nm which is efficiently absorbed by Nd3+ ions. 
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.75\linewidth]{planning/images/laser_history.PNG}
+	\caption{History of focused laser intensities from the inception of the laser in 1960. Taken from Figure 4 in Yakovlev \cite{Yakovlev_2014_QE}.}
+	\label{fig:laser_history}
+\end{figure}
+
+\section{Laser-Driven Ion Acceleration}
 
 Explain what a laser stands for, stimulated emission, lasing medium, what the Ti:sapphire crystal does and why it is chosen, CPA
 
