--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,21 @@
 	pages={1–50}
 }
 
+@article{Yakovlev_2014_QE,
+	doi = {10.1070/QE2014v044n05ABEH015429},
+	url = {https://dx.doi.org/10.1070/QE2014v044n05ABEH015429},
+	year = {2014},
+	month = {may},
+	publisher = {Turpion Ltd and the Russian Academy of Sciences},
+	volume = {44},
+	number = {5},
+	pages = {393},
+	author = {Yakovlev, I.V.},
+	title = {Stretchers and compressors for ultra-high power laser systems},
+	journal = {Quantum Electronics}
+}
+
+
 @article{Matuszak_2022_Onc,
 	title = {FLASH radiotherapy: an emerging approach in radiation therapy},
 	journal = {Reports of Practical Oncology and Radiotherapy},
