--- a/template-abstract.tex
+++ b/template-abstract.tex
@@ -1,3 +1,6 @@
 \begin{abstract}
-An abstract goes here. It should be less than \textbf{500 words}.
+When an ultra-intense laser irradiates a thin (around a micron in thickness) and flat target, highly energetic protons emerge from the back of the target. Since these protons are primarily accelerated in the target normal direction, this phenomena is often called target normal sheath acceleration (TNSA). The sheath refers to the cloud of laser-heated electrons that drive the protons forward via strong electrostatic forces. Due to their unique properties, proton beams have a wide variety of applications like proton therapy for cancer, materials characterization, and radiography. Additionally, the extremely short timescales and high intensities of modern lasers allow these beams to have beneficial characteristics that conventional beams from linear accelerators cannot achieve. Furthermore, the laser facilities accelerate protons over a much smaller distance compared to conventional accelerators which has potential space (and cost) savings. Unfortunately, modern laser facilities are not able to produce TNSA proton beams of sufficient quality for many of these applications. The ideal proton beam should consist of a significant number of high energy protons that are well collimated in one direction. Due to the highly complex nature of the laser-matter interactions, it is often unclear exactly how one might find such a beam. 
+
+In this work, I explore various ways to optimize the properties of TNSA beams. First, an incident laser beam is split in two equal energy pulses that irradiate the target at angles above and below the target normal direction. The constructive interference of the laser fields at the target front enhances both the maximum proton energy and beam collimation in a process termed enhanced target normal sheath acceleration. I explored this mechanism through computational particle-in-cell simulations in a complementary effort to an experimental effort at the Titan Laser early in 2024. Next, I borrowed and modified an existing proton acceleration model in the literature that predicts a TNSA proton energy distribution based on various target and laser parameters. From this, a synthetic dataset was constructed that enabled the comparison of various machine learning algorithms in proof-of-principle optimization efforts. Finally, I had the opportunity to test out some of the lessons learned on the synthetic data to real data collected at the Wright-Patterson Air Force Base. There, I wrote code to parse data collected from a laser run where multiple laser parameters were varied. From this data, I sent instructions back to the control system to automatically choose an optimal set of input parameters by using machine learning algorithms. While these machine learning efforts are certainly in preliminary stages, high repetition rates of both modern ultra-intense lasers and liquid targets provide a fertile ground for future optimizations.
+% Less than 500 words
 \end{abstract}
